--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,35 @@
 .App {
-  text-align: center;
+  font-family: 'Roboto', sans-serif; /* Use a global font */
+  background-color: #f8f8f8; /* Set a light background for the page */
+  color: #333; /* Default text color */
+  margin: 0;
+  padding: 0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+section {
+  padding: 40px 20px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+section#history, section#project-vision {
+  background-color: #fff;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+section#roadmap {
+  background-color: #f0f0f0;
 }
 
-.App-link {
-  color: #61dafb;
+section#tokenomics {
+  background-color: #fff;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+section#merchandise {
+  background-color: #f0f0f0;
+}
+
+section#games {
+  background-color: #fff;
+}
+
+section#social-media {
+  background-color: #f0f0f0;
 }
